<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="419dp"
        android:layout_height="557dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/story_photo_text"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/dummy_foto" />

    <CheckBox
        android:id="@+id/check_box_location"
        android:layout_width="162dp"
        android:layout_height="42dp"
        android:text="@string/set_loc_text"
        app:layout_constraintEnd_toEndOf="@id/ll_add_buttons"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/ll_add_buttons"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/descriptiontext"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="@id/iv_add_photo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/iv_add_photo"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="383dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="#000000"
        android:text="@string/addtext"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description"
        app:layout_constraintStart_toStartOf="@id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <LinearLayout
        android:id="@+id/ll_add_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description"
        app:layout_constraintStart_toStartOf="@id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_photo"
        app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
        app:layout_constraintVertical_bias="0.5"
        android:gravity="center">

        <Button
            android:id="@+id/button_add_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_by_cameratext"/>

        <Button
            android:id="@+id/button_add_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_by_gallerytext"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
