<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_detail_photo"
                    android:layout_width="412dp"
                    android:layout_height="614dp"
                    android:scaleType="fitCenter"
                    android:transitionName="photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dummy_foto"
                    android:contentDescription="@string/story_photo_text"/>

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:transitionName="name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:text="@string/dummy_username"
                    android:text="@string/user_nametext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo"
                    tools:ignore="True" />

                <View
                    android:id="@+id/guideline_description"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"/>

                <TextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/descriptiontext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
